changed: markup now real

--- a/dialog.html
+++ b/dialog.html
@@ -1,2 +1,14 @@
-<H1>TabWatch</h1>
-<p>Hello, world</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title></title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  <H1>TabWatch</h1>
+  <div>You have <span id="tabCount"></span> tabs open.</div>
+
+  <script src="app.js"></script>
+</body>
+</html>
