added: <code> tag around span for formatting

--- a/dialog.html
+++ b/dialog.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <H1>TabWatch</h1>
-  <div>You have <span id="tabCount"></span> tabs open.</div>
+  <div>You have <code><span id="tabCount"></span></code> tabs open.</div>
 
   <script src="app.js"></script>
 </body>
