fixed: points to new file correctly now

--- a/dialog.html
+++ b/dialog.html
@@ -9,6 +9,6 @@
   <H1>TabWatch</h1>
   <div>You have <code><span id="tabCount"></span></code> tabs open.</div>
 
-  <script src="app.js"></script>
+  <script src="dialog.js"></script>
 </body>
 </html>
