added: now specifies which tabs we are counting

--- a/dialog.html
+++ b/dialog.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <H1>TabWatch</h1>
-  <div>You have <code><span id="tabCount"></span></code> tabs open.</div>
+  <div>You have <code><span id="tabCount"></span></code> <span class="tabType">global</span> tabs open.</div>
 
   <script src="dialog.js"></script>
 </body>
