--- a/dialog.html
+++ b/dialog.html
@@ -9,6 +9,13 @@
   <H1>TabWatch</h1>
   <p>You have <code><span id="globalTabCount">0</span></code> tabs open globally.</p>
   <p>You have <code><span id="localTabCount">0</span></code> tabs open in this window.</p>
+  <nav>
+    <ul class='nav-links'>
+      <li>Preferences</li>
+      <li>Archive Tabs</li>
+    </ul>
+    <div class="clear-both"></div>
+  </nav>
 
   <form>
     <fieldset>
