added: more nav styling

--- a/dialog.html
+++ b/dialog.html
@@ -7,16 +7,19 @@
 </head>
 <body>
   <H1>TabWatch</h1>
-  <p>You have <code><span id="globalTabCount">0</span></code> tabs open globally.</p>
-  <p>You have <code><span id="localTabCount">0</span></code> tabs open in this window.</p>
   <nav>
     <ul class='nav-links'>
+      <li class="active">Status</li>
       <li>Preferences</li>
       <li>Archive Tabs</li>
     </ul>
     <div class="clear-both"></div>
   </nav>
 
+  <hr>
+
+  <p>You have <code><span id="globalTabCount">0</span></code> tabs open globally.</p>
+  <p>You have <code><span id="localTabCount">0</span></code> tabs open in this window.</p>
   <form>
     <fieldset>
       <legend>Desired number of tabs</legend>
