--- a/dialog.html
+++ b/dialog.html
@@ -43,17 +43,13 @@
   </section>
 
   <section id="archiveSection">
-    Sorry, not implemented yet!
+    <p>Sorry, not implemented yet!</p>
   </section>
 
   <section id="aboutSection">
-    TabWatch written by Christopher Fujino. Source code can be found on <a href="https://github.com/christopherfujino/TabWatch">GitHub</a>.
+    <p>TabWatch written by Christopher Fujino. Source code can be found on <a href="https://github.com/christopherfujino/TabWatch">GitHub</a>.</p>
   </section>
 
   <script src="dialog.js"></script>
-
-  <footer>
-    TabWatch written by <a href="mailto:christopherfujino@gmail.com">Christopher Fujino</a>.
-  </footer>
 </body>
 </html>
