added: saves to chrome.storage.sync, setting of tabLimit works

--- a/dialog.html
+++ b/dialog.html
@@ -28,7 +28,7 @@
     <form>
       <fieldset>
         <legend>Desired number of tabs</legend>
-        <input style="width:3em;" value="5" type=number min="1">
+        <input style="width:3em;" type=number value="5" min="1" id="tabPicker">
       </fieldset>
 
       <fieldset>
