fixed: several bugs which kept setting tabScope from working properly

--- a/dialog.html
+++ b/dialog.html
@@ -34,10 +34,10 @@
       <fieldset>
         <legend>Which tabs would you like to track?</legend>
         <input name=tabScope type=radio value="window" checked>
-        <label>Tabs in this window</label></input><br>
+        <label>Tabs in this window</label><br>
         
         <input name=tabScope type=radio value="global">
-        <label>All tabs</label></input>
+        <label>All tabs</label>
       </fieldset>
     </form>
   </section>
