added: link to my e-mail

--- a/dialog.html
+++ b/dialog.html
@@ -47,7 +47,7 @@
   </section>
 
   <section id="aboutSection">
-    <p>TabWatch written by Christopher Fujino. Source code can be found on <a href="https://github.com/christopherfujino/TabWatch">GitHub</a>.</p>
+    <p>TabWatch written by <a href="mailto:christopherfujino@gmail.com">Christopher Fujino</a>. Source code can be found on <a href="https://github.com/christopherfujino/TabWatch">GitHub</a>.</p>
   </section>
 
   <script src="dialog.js"></script>
