fixed: clicks on text now select radio buttons

--- a/dialog.html
+++ b/dialog.html
@@ -33,11 +33,15 @@
 
       <fieldset>
         <legend>Which tabs would you like to track?</legend>
-        <input name=tabScope type=radio value="window" checked>
-        <label>Tabs in this window</label><br>
+        <label>
+          <input name=tabScope type=radio value="window" checked>
+          <span>Tabs in this window</span>
+        </label><br>
         
-        <input name=tabScope type=radio value="global">
-        <label>All tabs</label>
+        <label>
+          <input name=tabScope type=radio value="global">
+          <span>All tabs</span>
+        </label>
       </fieldset>
     </form>
   </section>
