cleanup: tag id name

--- a/dialog.html
+++ b/dialog.html
@@ -14,7 +14,7 @@
   </header>
 
   <nav>
-    <ul id='nav-links'>
+    <ul id='navLinks'>
       <li class="active" data-section="preferencesSection">Preferences</li>
       <li data-section="archiveSection">Archive</li>
       <li data-section="aboutSection">About</li>
